# Ztor

./: .travis.yml  Cargo.toml  README.md  build.rs
src/: ast.rs  directory.rs  grammar.lalrpop  lib.rs  main.rs
src/compiler/: executer.rs
src/memory/: directory.rs  mod.rs  variables.rs
src/parser/: lexer.rs  tokens.rs
src/semantic/: cube.rs  datatype.rs  mod.rs  quadruples.rs
src/utils/: mod.rs  node.rs  queue.rs  stack.rs
tests/: parser_test.rs
